correction des z-index ,effet d'ombre au  survol des cartes sur rejoignez nous , reglage du responsive ,+ scrool bar invisible sur les carte

--- a/src/css/mobile-first.css
+++ b/src/css/mobile-first.css
@@ -27,14 +27,14 @@ body{
 /*Start - header css*/
 .w-logo{
     height: 80px;
-    width: 80px;
-    z-index: 400;
+    width: 90px;
+    z-index: 4;
 }
 nav{
     position: fixed;
     width:100%;
     background: #1B1E3D;
-    z-index: 300;
+    z-index: 3;
     margin:0;
     padding: 0;
 }
@@ -46,7 +46,7 @@ nav a:nth-child(1){
     top:10px;
     right:15px;
     width: 50px;
-    z-index:400;
+    z-index:4;
     display:none;
 }
 .liste-nav{
@@ -55,7 +55,7 @@ nav a:nth-child(1){
     height: 80px;
     width: 100%;
     justify-content: center;
-    z-index:100;
+    z-index:1;
     display: inline-flex;
     list-style-type: none;
     
@@ -487,7 +487,7 @@ padding-right: 1rem;;
 
 * {
     box-sizing: border-box;
-    line-height: 1.5;
+    line-height: 1.4;
     font-family: 'Montserrat', 'sans-serif';
      
   }
@@ -517,7 +517,12 @@ img {
         color: #aaa;
         box-shadow: 0 .25rem .25rem rgba(0,0,0,0.2),
         0 0 1rem rgba(0,0,0,0.2);
-        overflow: hidden;
+        overflow: auto;
+        
+    }
+    .card::-webkit-scrollbar{display: none;}
+    .card:hover{
+        box-shadow:  0.6rem 0.6rem rgb(0 0 0 / 20%);
     }
 .card1
     {
@@ -530,8 +535,12 @@ img {
         color: #aaa;
         box-shadow: 0 .25rem .25rem rgba(0,0,0,0.2),
         0 0 1rem rgba(0,0,0,0.2);
-        overflow: hidden;  
+        overflow:auto;  
     }  
+    .card1::-webkit-scrollbar{display: none;}
+    .container:hover .card1:hover{
+        box-shadow:  0.6rem 0.6rem rgb(0 0 0 / 20%);
+          }
     
 .card2
     {
@@ -544,8 +553,11 @@ img {
         color: #aaa;
         box-shadow: 0 .25rem .25rem rgba(0,0,0,0.2),
         0 0 1rem rgba(0,0,0,0.2);
-        overflow: hidden;  
+        overflow: auto;  
     }  
+    .card2::-webkit-scrollbar{display: none;}
+    .card2:hover{
+        box-shadow:  0.6rem 0.6rem rgb(0 0 0 / 20%);}
 .card__image-container 
     {
       margin: -2rem -2rem 1rem -2rem;
@@ -588,13 +600,24 @@ img {
     {
         .container 
         {
-          display:flex;  
+          display:grid;
+          padding-top: 8rem;  
           flex-direction: column;
-          justify-content: space-evenly;
-          
-        
+          justify-content: center;
+          background:var(--very-light-blue);
+          height:auto;
         }
-        
+        .card
+        {
+            margin:10px auto 3rem;
+        }
+        .card1{
+            margin:3rem;
+        }
+        .card2{
+            margin:3rem auto 160px;
+            
+        }
     
     }
   
